# wikipedia_kb

./: .env.example  .gitignore  pyproject.toml
wikipedia_kb/: run.py  schemas.py
wikipedia_kb/configs/: deployment.json  kb_deployments.json  knowledge_base_deployment.json
