[tool.poetry]
name = "wikipedia_kb"
version = "0.1.0"
description = "Wikipedia Knowledge Base"
authors = ["Mohamed Arshath <marshath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git", branch = "chore/different-clients"}
pydantic = "^2.9.2"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"